src/components/pages/Home/ContentSection.css
.section-wrapper {
  position: relative;
  z-index: 10;
  max-width: 1150px;
  margin: auto;
  padding-left: 4.8rem;
  padding-right: 4.8rem;
  padding-top: 24rem; 
  padding-bottom: 24rem;  
  overflow: hidden;
}

.section-header {
  display: flex;
  align-items: center;
  gap: 2.4rem;
  margin-bottom: 2.4rem;
}

.section-header-line {
  width: 100%;
  height: 1px;
  background:  #ffffff;
  opacity: 0.5;
}

.experience-seperator-line {
  width: 100%;
  height: 1px;
  background:  #ffffff;
  opacity: 0.2;
}

.section-content-about {
  display: grid;
  grid-template-columns: 1fr 300px;
  grid-gap: 2.4rem;
  gap: 2.4rem;
  padding: 1rem;
}

.section-content-projects {
  padding: 1rem;
}

.section-content-experience {
  padding: 1rem;
}

.section-content-contact {
  text-align: center;
  padding: 1rem;
}

.experience-item-header-1, .experience-item-header-2 {
  display: flex;
  justify-content: space-between; /* Align to the left and right */
  align-items: center; /* Vertically center align */
  margin-bottom: 10px;
}

.experience-item-header-1 > h2 {
  font-size: 25px;
  text-align: left;
  font-weight: 700;
  color: #ffffff;
}

.experience-item-header-1 > h3 {
  font-size: 20px;
  text-align: right;
  font-weight: 300;
  color: #ffffff;
}

.experience-item-header-2 > h2 {
  font-size: 20px;
  text-align: left;
  font-weight: 700;
  color: #ff932e;
}

.experience-item-header-2 > h3 {
  font-size: 20px;
  text-align: right;
  font-weight: 300;
  color: #ffffff;
}

.project-container {
  display: grid;
  grid-template-columns: 48% 48%;
  gap: 4%;
  margin-bottom: 142px;
}

.projects-item-header-1, .projects-item-header-2 {
  display: flex;
  justify-content: space-between; 
  align-items: center; 
  margin-top: 10px;
  margin-bottom: 10px;
}

.projects-item-text {
  align-items: center; 
  margin-top: 10px;
  margin-bottom: 10px;
}

.projects-item-header-1 > h2 {
  font-size: 20px;
  text-align: left;
  font-weight: 800;
  color: #ffffff;
}

.projects-item-header-2 > h2 {
  font-size: 18px;
  text-align: left;
  font-weight: 400;
  color: #ff932e;
}

.projects-item-text > h2 {
  font-size: 18px;
  text-align: left;
  font-weight: 250;
  color: #ffffff;
}

.project-image-container {
  background-color: #2c2c2c; 
  opacity: 1;
  border-radius: 7px;
  height: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.project-image-container > img {
  object-fit: cover;
}

.projects-header-line {
  flex: 1;
  height: 1px;
  background:  #ffffff;
  opacity: 0.2;
  margin-left: 10px;
  margin-right: 10px;
}

.content-section {
  padding: 4rem;
  padding-left: 4rem;
  padding-right: 4rem;
  padding-top: 4rem; 
  padding-bottom: 0rem;  
  background: #131313;
}

.linkIcon {
  color: #ff932e;
  margin-left: 20px;
}

.linkIcon:hover {
  color:  #ffffff;
  transition: all 0.2s ease-out;
}

.linkIcon-projects {
  color: #ffffff;
}

.linkIcon-projects:hover {
  color:  #ff932e;
  transition: all 0.2s ease-out;
}

.contact-email {
  color: #ffffff;
}

.contact-email:hover {
  color:  #ff932e;
  transition: all 0.2s ease-out;
}

.tool-container {
  background-color: #2c2c2c; 
  opacity: 1;
  border-radius: 20px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-right: 5px;
}

h1 {
  color: #ffffff;
  font-size: 50px;
  text-align: center;
  letter-spacing: 4px;
}

p {
  color: #ffffff;
  font-size: 18px;
  font-weight: 250;
}

